sp-06 resolve overflow on home page

--- a/app/css/home.css
+++ b/app/css/home.css
@@ -26,21 +26,10 @@
   margin-top: calc(100vh - 10px);
 }
 
-.actions {
-  height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .actions-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
   top: 60px;
   left: calc(50% - 300px);
+  overflow: hidden;
 }
 
 .actions-card {
@@ -134,4 +123,10 @@ svg {
 .actions-card:hover .stroke {
   stroke-dashoffset: 100;
   transition: 0.6s ease-out;
+}
+
+@media screen and (max-width: 639px) {
+  .emptybar {
+    width: 50%;
+  }
 }
